--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,7 +6,8 @@ authors: [EspiDev]
 depend: [WorldGuard, WorldEdit]
 softdepend: [Vault, PlaceholderAPI, LuckPerms]
 main: dev.espi.protectionstones.ProtectionStones
-api-version: 1.17
+api-version: 1.20
+folia-supported: true
 
 permissions:
   protectionstones.create:
